--- a/CV.html
+++ b/CV.html
@@ -104,7 +104,7 @@
                 <ol style="list-style: circle;">
                     <li>LinkedIn :<a href="https://www.linkedin.com/in/ahmed-elromaissy-455408228">Ahmad Alromaissy</a>
                     </li>
-                    <li>GitHub : <a href="https://www.github.com">Ahmad Alromaissy</a></li>
+                    <li>GitHub : <a href="https://github.com/Romzaa">Ahmad Alromaissy</a></li>
 
                 </ol>
             </section>
@@ -112,5 +112,6 @@
         </header>
     </main>
 </body>
+
 
 </html>
