--- a/CV.html
+++ b/CV.html
@@ -55,8 +55,8 @@
                     <ul style="list-style: none;">
                         <li>Delta.Stadium Korniesh</li>
                         <li>Tanta,Egypt</li>
-                        <li><a href="tel:+201067808578">+201076808578</a></li>
-                        <li><a href="mailto:elromaissy@gmailcom">elromaissy@gmail.com</a></li>
+                        <li><a href="tel:+201067808578">Mobile</a></li>
+                        <li><a href="mailto:elromaissy@gmailcom">Email</a></li>
                     </ul>
                 </address>
             </section>
@@ -115,3 +115,4 @@
 
 
 </html>
+
