--- a/CV.html
+++ b/CV.html
@@ -55,8 +55,8 @@
                     <ul style="list-style: none;">
                         <li>Delta.Stadium Korniesh</li>
                         <li>Tanta,Egypt</li>
-                        <li><a href="tel:+201067808578">Mobile</a></li>
-                        <li><a href="mailto:elromaissy@gmailcom">Email</a></li>
+                        <li><a href="tel:+20123456789">Mobile</a></li>
+                        <li><a href="mailto:example@gmailcom">Email</a></li>
                     </ul>
                 </address>
             </section>
@@ -115,4 +115,5 @@
 
 
 </html>
+
 
